infra/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: clashcode-prod-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:317451122305:certificate/ea73b2a3-c8e0-45f8-a58e-32b957b149d7
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8001
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8001
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8002
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 8000
